[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bambulabs_api"
version = "1.0.0"
authors = [
  { name="Chris Ioannidis", email="chris.ioannidis23@imperial.ac.uk" },
]
description = "API for BambuLabs 3D Printers over MQTT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/acse-ci223/bambulabs_api"
Docs = "https://acse-ci223.github.io/bambulabs_api/"
Issues = "https://github.com/acse-ci223/bambulabs_api/issues"